--- a/environments/prod/values.yml
+++ b/environments/prod/values.yml
@@ -1,5 +1,5 @@
 backend:
-  replicaCount: 2
+  replicaCount: 1
   image:
     repository: omerteomim/backend
     tag: latest
@@ -14,7 +14,7 @@ backend:
       cpu: "250m"
       memory: "128Mi"
 frontend:
-  replicaCount: 2
+  replicaCount: 1
   image:
     repository: omerteomim/frontend
     tag: latest
@@ -30,3 +30,6 @@ frontend:
       memory: "128Mi"
 ingress:
   host: prod.teomim.site
+
+namespace:
+  name: psychometry-app-prod
