--- a/environments/applicationset.yaml
+++ b/environments/applicationset.yaml
@@ -20,14 +20,14 @@ spec:
       project: default
       sources:
         - repoURL: https://github.com/omerteomim/bootcamp-project.git
-          targetRevision: HEAD
+          targetRevision: main
           path: chart-psychometric
           helm:
             valueFiles:
               - $values/environments/prod/values.yml
 
         - repoURL: https://github.com/omerteomim/bootcamp-gitops.git
-          targetRevision: HEAD
+          targetRevision: main
           ref: values
       destination:
         server: https://kubernetes.default.svc
